# ParcialCorte3

./: Cargo.toml  README.md  Regresion_Lineal_Python.py  Regresion_Lineal_Rust.rs
